force-app/main/default/objects/Account/fields/Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Email__c</fullName>
    <description>Account Email Address</description>
    <label>Account Email</label>
    <type>Email</type>
</CustomField>