force-app/main/default/objects/Account/fields/AccountExternalID__c.field-meta.xml
<CustomField>
    <fullName>AccountExternalID__c</fullName>
    <description>This Account external Id is used to integrate with external systems.</description>
    <displayFormat>Account-{000000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>This Account external Id is used to integrate with external systems.</inlineHelpText>
    <label>AccountExternalID</label>
    <type>AutoNumber</type>
</CustomField>