force-app/main/default/objects/Account/fields/CSR__c.field-meta.xml
<CustomField>
    <fullName>CSR__c</fullName>
    <label>CSR</label>
    <length>18</length>
    <type>Text</type>
</CustomField>