force-app/main/default/objects/Account/fields/OpportunityAmount__c.field-meta.xml
<CustomField>
    <fullName>OpportunityAmount__c</fullName>
    <label>OpportunityAmount</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>