force-app/main/default/objects/Account/validationRules/Validate_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Service_Start_Date__c &gt;= TODAY()</errorConditionFormula>
    <errorDisplayField>Service_Start_Date__c</errorDisplayField>
    <errorMessage>Service Start Date cannot be current or future date</errorMessage>
</ValidationRule>